--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,23 @@
 ---
 ---
 @import "{{ site.theme }}";
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+#canvas1{
+    border: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background: deepskyblue;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#player, #layer1, #layer2, #layer3, #jellyfish{
+    display: none;
+}
